# ai-types

./: CHANGELOG.md  Cargo.toml  README.md
ai-types/: Cargo.toml
ai-types-derive/: CHANGELOG.md  Cargo.toml
ai-types-derive/src/: lib.rs
ai-types/examples/: tool_macro.rs
ai-types/src/: embedding.rs  moderation.rs
ai-types/src/llm/: message.rs  model.rs  tool.rs
derive/: CHANGELOG.md  Cargo.toml  README.md
derive/src/: lib.rs
src/: audio.rs  embedding.rs  image.rs  lib.rs  moderation.rs
src/llm/: assistant.rs  message.rs  mod.rs  model.rs  provider.rs  stream.rs  tool.rs
