[package]
name = "ai-types"
version = "0.0.1"
edition = "2024"
authors = ["Lexo Liu <me@lexo.cool>"]
description = "Providing unified trait abstractions for AI models"
documentation = "https://docs.rs/ai-types"
repository = "https://github.com/lexoliu/ai-types"
license = "MIT"
keywords = ["ai", "llm", "embedding", "image-generation", "no-std"]
categories = ["api-bindings", "no-std"]
readme = "README.md"
exclude = [
    ".github/",
    ".gitignore",
    "target/",
]

rust-version = "1.85"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
futures-core = { version = "0.3.31", default-features = false}
futures-lite = { version = "2.6", default-features = false }
schemars = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
url = { version = "2.5", default-features = false }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
futures = "0.3"

[lints]
rust.missing_docs = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "warn"