[workspace]
resolver = "2"
members = [
    "ai-types",
    "ai-types-derive",
]

[workspace.package]
edition = "2024"
authors = ["Lexo Liu <me@lexo.cool>"]
license = "MIT"
repository = "https://github.com/lexoliu/ai-types"
rust-version = "1.85"

[workspace.lints]
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "warn"
