[package]
name = "ai-types-derive"
version = "0.0.1"
edition = "2024"
authors = ["Lexo Liu <me@lexo.cool>"]
description = "Procedural macros for ai-types"
license = "MIT"
repository = "https://github.com/lexoliu/ai-types"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "printing", "extra-traits"] }
convert_case = "0.8.0"